--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.22.0
+  rename: ^1.3.1
+  universal_platform: ^0.1.3
 
 dev_dependencies:
   flutter_test:
